# todo-ipc

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: client.rs  lib.rs  server.rs
